News in 6.6.0, 2023-06-29
-------------------------
* Nothing transcendental.

News in 6.5.1, 2023-04-26
-------------------------
* Tepl now depends on libgedit-gtksourceview instead of GtkSourceView:
    https://github.com/gedit-technology/libgedit-gtksourceview
    https://gedit-technology.net/
* New classes: TeplStack, TeplStackItem and TeplStackSwitcherMenu.
* Remove the attic/ (no longer necessary with the TeplStack* classes).
* Build: adapt to the latest Meson version.

News in 6.4.0, 2023-01-01
-------------------------
* Build: simplify handling of library soversion.
* Add some new API (see the reference documentation).
* Some API breaks (see the reference documentation).
* Experiments to simplify GtkStack custom switcher implementations.
  Moved the result to the attic/ directory.
* TeplView: add code from gedit: override delete_from_cursor vfunc.
  In gedit it's for the Ctrl+D keybinding to delete the current line.

News in 6.2.0, 2022-11-02
-------------------------
* Remove deprecated API.
* Add some new API (see the reference documentation).
* Small improvements.

News in 6.1.2, 2022-07-12
-------------------------
* API stability is no longer guaranteed.

* New features / API: see the index of new symbols in the reference
  documentation (generated with gtk-doc).
* Documentation improvements.

News in 6.1.1, 2022-06-10
-------------------------
* New features / API: see the index of new symbols in the reference
  documentation (generated with gtk-doc).
* Tests: files reorganization within the repository, have the following
  directories:
    - tests/interactive-tests/
    - tests/unit-tests/
* Documentation: split the API Reference into two parts:
    - Text Editor Support
    - General Utilities (more broadly applicable)
* Documentation: various other small improvements.

News in 6.0.2, 2022-05-27
-------------------------
* Build system: check if compiler supports --version-script linker option.

News in 6.0.1, 2022-05-02
-------------------------