@@ -174,7 +174,7 @@ tepl_lib = library(
   link_depends: symbol_map,
   # link_whole is not supported with MSVC, so we use extract_all_objects().
   objects: tepl_static_lib.extract_all_objects(recursive: false),
-  soversion: 3,
+  soversion: 4,
   install: true
 )
 
