@@ -1,3 +1,9 @@
+News in 6.8.0, 2023-07-29
+-------------------------
+* Update for Amtk -> libgedit-amtk rename.
+* New/changed/removed APIs: see the API docs.
+* A bug fix.
+
 News in 6.6.0, 2023-06-29
 -------------------------
 * Nothing transcendental.
